<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/board"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/game_board"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/board" />

    <LinearLayout
        android:id="@+id/red"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/red0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="5dp">

            <ImageView
                android:id="@+id/red00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/red"
                android:paddingStart="5dp"
                android:paddingLeft="2dp"
                android:paddingRight="6dp"
                app:srcCompat="@drawable/red" />

            <ImageView
                android:id="@+id/red01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/red"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                app:srcCompat="@drawable/red" />

            <ImageView
                android:id="@+id/red02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/red"
                android:paddingLeft="6dp"
                android:paddingRight="2dp"
                app:srcCompat="@drawable/red" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/red1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="5dp">

            <ImageView
                android:id="@+id/red10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/red"
                android:paddingLeft="2dp"
                android:paddingRight="6dp"
                app:srcCompat="@drawable/red" />

            <ImageView
                android:id="@+id/red11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/red"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                app:srcCompat="@drawable/red" />

            <ImageView
                android:id="@+id/red12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/red"
                android:paddingLeft="6dp"
                android:paddingRight="2dp"
                app:srcCompat="@drawable/red" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/red2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="5dp">

            <ImageView
                android:id="@+id/red20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/red"
                android:paddingStart="5dp"
                android:paddingLeft="2dp"
                android:paddingRight="6dp"
                app:srcCompat="@drawable/red" />

            <ImageView
                android:id="@+id/red21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/red"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                app:srcCompat="@drawable/red" />

            <ImageView
                android:id="@+id/red22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/red"
                android:paddingLeft="6dp"
                android:paddingRight="2dp"
                app:srcCompat="@drawable/red" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/yellow"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/yellow0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="5dp">

            <ImageView
                android:id="@+id/yellow00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/yellow"
                android:onClick="moveHasBeenMade"
                android:paddingStart="5dp"
                android:paddingLeft="2dp"
                android:paddingRight="6dp"
                android:tag="00"
                app:srcCompat="@drawable/yellow" />

            <ImageView
                android:id="@+id/yellow01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/yellow"
                android:onClick="moveHasBeenMade"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:tag="01"
                app:srcCompat="@drawable/yellow" />

            <ImageView
                android:id="@+id/yellow02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/yellow"
                android:onClick="moveHasBeenMade"
                android:paddingLeft="6dp"
                android:paddingRight="2dp"
                android:tag="02"
                app:srcCompat="@drawable/yellow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/yellow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="5dp">

            <ImageView
                android:id="@+id/yellow10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/yellow"
                android:onClick="moveHasBeenMade"
                android:paddingLeft="2dp"
                android:paddingRight="6dp"
                android:tag="10"
                app:srcCompat="@drawable/yellow" />

            <ImageView
                android:id="@+id/yellow11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/yellow"
                android:onClick="moveHasBeenMade"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:tag="11"
                app:srcCompat="@drawable/yellow" />

            <ImageView
                android:id="@+id/yellow12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/yellow"
                android:onClick="moveHasBeenMade"
                android:paddingLeft="6dp"
                android:paddingRight="2dp"
                android:tag="12"
                app:srcCompat="@drawable/yellow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/yellow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="5dp">

            <ImageView
                android:id="@+id/yellow20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/yellow"
                android:onClick="moveHasBeenMade"
                android:paddingStart="5dp"
                android:paddingLeft="2dp"
                android:paddingRight="6dp"
                android:tag="20"
                app:srcCompat="@drawable/yellow" />

            <ImageView
                android:id="@+id/yellow21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/yellow"
                android:onClick="moveHasBeenMade"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:tag="21"
                app:srcCompat="@drawable/yellow" />

            <ImageView
                android:id="@+id/yellow22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/yellow"
                android:onClick="moveHasBeenMade"
                android:paddingLeft="6dp"
                android:paddingRight="2dp"
                android:tag="22"
                app:srcCompat="@drawable/yellow" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/wrong_move"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:onClick="startNewGame"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>